--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </style>
 </head>
 <body>
-    <video id="video-background" autoplay loop muted>
+    <video id="video-background" autoplay loop muted playsinline>
         <source src="https://github.com/IPPYZ/IPPYZ.github.io/raw/main/Loop.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
