--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bio Page</title>
+    <title>صفحة السيرة الذاتية</title>
     <style>
         body {
             margin: 0;
@@ -15,60 +15,62 @@
             justify-content: center;
             align-items: center;
             position: relative;
+            background-color: #000; /* لون الخلفية أسود */
         }
-        #video-background {
+        #background-image {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: -1; 
+            z-index: -1;
+            object-fit: cover; /* لتغطية الصورة للشاشة بالكامل */
         }
         .content {
-            background: rgba(255, 255, 255, 0.7);
-            padding: 20px;
-            border-radius: 10px;
             text-align: center;
             z-index: 1; 
-        }
-        .profile-pic {
-            width: 150px;
-            height: 150px;
-            overflow: hidden;
-            margin: 0 auto 20px;
-            border-radius: 50%;
+            color: white;
+            padding: 20px;
         }
         .profile-pic img {
             width: 150px;
             height: 150px;
             object-fit: cover;
             border-radius: 50%;
+            margin-bottom: 20px;
         }
         /* ستايل للزر */
         .audio-control {
             cursor: pointer;
-            width: 50px;
-            height: 50px;
+            width: 60px; /* زيادة العرض */
+            height: 60px; /* زيادة الارتفاع */
             background-size: cover;
             border: none;
+            transition: background-image 0.3s ease;
+            background-color: transparent; /* جعل لون الخلفية شفافًا */
+        }
+        .audio-control.play {
+            background-image: url("https://github.com/IPPYZ/IPPYZ.github.io/raw/main/play.png"); /* تغيير إلى PNG */
+        }
+        .audio-control.pause {
+            background-image: url("https://github.com/IPPYZ/IPPYZ.github.io/raw/main/pause.png"); /* تغيير إلى PNG */
+        }
+        a {
+            color: white; /* تغيير لون الروابط إلى أبيض */
         }
     </style>
 </head>
-<body>
-    <video id="video-background" autoplay loop muted playsinline>
-        <source src="https://github.com/IPPYZ/IPPYZ.github.io/raw/main/Loop.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+<body onload="playAudio()">
+    <img id="background-image" src="https://github.com/IPPYZ/IPPYZ.github.io/raw/main/wallpapr.jpg" alt="صورة الخلفية">
     <div class="content">
         <div class="profile-pic">
-            <img src="https://img.freepik.com/premium-photo/arabic-calligraphy-wallpaper-wall-with-brown-background-old-paper-interlacing_430468-582.jpg?w=1480" alt="Your Profile Picture">
+            <img src="https://img.freepik.com/premium-photo/arabic-calligraphy-wallpaper-wall-with-brown-background-old-paper-interlacing_430468-582.jpg?w=1480" alt="صورتك الشخصية">
         </div>
-        <h1>Welcome to My Bio Page!</h1>
-        <p>This is where you can find all the information about me.</p>
-        <p>Follow me on <a href="https://www.instagram.com/ippyz">Instagram</a>.</p>
-
+        <h1>مرحبًا بك في صفحتي الشخصية!</h1>
+        <p>هنا يمكنك العثور على جميع المعلومات حولي.</p>
+        <p>تابعني على <a href="https://www.instagram.com/ippyz">إنستغرام</a>.</p>
         <!-- الصورة للتحكم في الصوت -->
-        <button class="audio-control" onclick="toggleAudio()"></button>
+        <button class="audio-control pause" onclick="toggleAudio()"></button>
     </div>
 
     <!-- الصوت -->
@@ -80,11 +82,20 @@
         function toggleAudio() {
             if (audio.paused) {
                 audio.play();
-                document.querySelector('.audio-control').style.backgroundImage = 'url("https://github.com/IPPYZ/IPPYZ.github.io/raw/main/play.gif")';
+                document.querySelector('.audio-control').classList.remove('pause');
+                document.querySelector('.audio-control').classList.add('play');
             } else {
                 audio.pause();
-                document.querySelector('.audio-control').style.backgroundImage = 'url("https://github.com/IPPYZ/IPPYZ.github.io/raw/main/pause.gif")';
+                document.querySelector('.audio-control').classList.remove('play');
+                document.querySelector('.audio-control').classList.add('pause');
             }
+        }
+
+        // تشغيل الصوت تلقائيًا عند بدء تحميل الصفحة
+        function playAudio() {
+            audio.play();
+            document.querySelector('.audio-control').classList.remove('pause');
+            document.querySelector('.audio-control').classList.add('play');
         }
     </script>
 </body>
